<resources>
    <string name="app_name">Football</string>
    <string name="splash_desc">jogging ball</string>
    <string name="competitions">Competitions</string>
    <string name="competition_date">%s %s</string>
    <string name="retry">Retry</string>
    <string name="team_img_desc">team crest image</string>
    <string name="team_crest">Team crest</string>
    <string name="club_details">Club details</string>
    <string name="founded">Founded</string>
    <string name="nick_name">Nick Name</string>
    <string name="address">Address</string>
    <string name="website">Website</string>
    <string name="email_address">Email Address</string>
    <string name="club_colors">Club colors</string>
    <string name="phone_number">Phone Number</string>
    <string name="team_players">Team Players</string>
</resources>